<resources>
    <string name="app_name">临沧市电子地图集</string>
    <string name="app_showname">临沧市电子地图集</string>
    <string name="save_folder_name1">ElectronicAtlasMap</string>
    <string name="pick_file">找到</string>
    <string name="start">开始</string>
    <string name="go">正式开始</string>
    <string name="stop">停止</string>
    <string name="querytip">查询</string>
    <string name="SaveInfo">保存成功</string>
    <string name="toast_pick_file_error">不能打开文件, 请检查文件管理状态</string>
    <string name="InRedLine">在生态保护红线内</string>
    <string name="NoInRedLine">不在生态保护红线内</string>
    <string name="RedLineError">请输入标准经纬度格式</string>
    <string name="NoLongClickError">请长按某个子项后, 再选择菜单栏操作</string>
    <string name="version_info">1.9.3</string>
    <string name="version_info_0">当前版本: </string>
    <string name="QueryPathError">请安装一款主流地图软件</string>
    <string name="QueryPathError1">路径规划查询中出现了未知错误</string>
    <string name="version_info_1">云南省地图院数据分院制</string>
    <string name="version_info_2">联系电话: 13108714475</string>
    <string name="version_info_3">邮箱: 345131571@qq.com</string>
    <string name="EasterEggOpenInfo">开启成功</string>
    <string name="EasterEggCloseInfo">关闭成功</string>
    <string name="EasterEggErrorInfo">你缺失一些必要文件, 请确认后再开启该功能</string>
    <string name="HasDeleteAllWhiteBlank">已清空当前画板</string>
    <string name="MapList">地图列表</string>
    <string name="AddMap">添加地图</string>
    <string name="OutputData">导出数据</string>
    <string name="OutputSingleData">导出当前地图数据</string>
    <string name="InputData">导入数据</string>
    <string name="IsLongClicking">正在进行长按操作</string>
    <string name="DeleteBt">删除</string>
    <string name="CancelBt">取消</string>
    <string name="ShowInfoBt">版本信息</string>
    <string name="BackBt">返回</string>
    <string name="CloseAll">关闭所有窗口</string>
    <string name="SimpleQueryBt">简单查询</string>
    <string name="InfoBt">信息</string>
    <string name="QueryAllPOIBt">查询所有兴趣点</string>
    <string name="RedLineTip">请输入经纬度</string>
    <string name="AddTape">添加录音</string>
    <string name="AddPhoto">添加照片</string>
    <string name="Reset">重置</string>
    <string name="Messure">测量</string>
    <string name="Back">返回</string>
    <string name="Loc">定位</string>
    <string name="ShowWhiteBlank">白板图显示</string>
    <string name="ShowPOI">图层控制器</string>
    <string name="ShowTrail">轨迹线显示</string>
    <string name="CenterMode">中心点模式</string>
    <string name="LatLngTip">在这里显示坐标值</string>
    <string name="Add">添加</string>
    <string name="BackAndUpdate">返回更新</string>
    <string name="DeletePOI">删除兴趣点</string>
    <string name="RestorePOI">恢复</string>
    <string name="POIList">兴趣点列表</string>
    <string name="TapeList">录音列表</string>
    <string name="PhotoList">相片列表</string>
    <string name="VideoList">录像列表</string>
    <string name="sava">保存</string>
    <string name="DateAndTime">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="Date">yyyy年MM月dd日</string>
    <string name="InputLicenseError">请联系我们获取授权码</string>
    <string name="FinishCopy">已复制到剪贴板</string>
    <string name="PermissionError">必须通过所有权限才能使用本程序!</string>
    <string name="LocError">请打开定位功能；若已打开定位功能，请移动到存在gps信号的位置!</string>
    <string name="LocError1">请添加带有坐标的图片!</string>
    <string name="DeleteError">删除文件失败</string>
    <string name="OpenFileError">无法打开该文件</string>
    <string name="GetGeoInfo">正在提取地理信息</string>
    <string name="GetGeoInfoOk">获取完毕!</string>
    <string name="GetGeoInfoError">地理信息获取失败</string>
    <string name="QLXWM">, 请联系我们</string>
    <string name="GetInputData">正在解析数据</string>
    <string name="AddedMapTip">已经添加过该地图!</string>
    <string name="DataInputOk">数据导入完成</string>
    <string name="InputingData">数据入库中!</string>
    <string name="PackingData">正在打包数据</string>
    <string name="QSH">, 请稍后!</string>
    <string name="PackingOk">打包成功!</string>
    <string name="AutoTransError">自动切换地图功能故障</string>
    <string name="TakePhotoError">拍照失败, 请再次拍摄</string>
    <string name="TrailError">所在位置不在当前地图中, 不可记录轨迹</string>
    <string name="OpenTrailError">请先打开轨迹记录功能</string>
    <string name="LocError_1">当前不在该地图中</string>
    <string name="SpecialError">发生错误</string>
    <string name="ResetError">重置失败!</string>
    <string name="TakeTapeError">无法打开录音功能</string>
    <string name="TakeTapeError1">录音文件已损坏, 无法正常播放</string>
    <string name="NoTapeTip">该地没有录制音频</string>
    <string name="CannotGetThumbnail">无法获取缩略图!</string>
    <string name="MessureNumOutOfIndex">目前只支持显示三条计算数据!</string>
    <string name="Date_1">yyyyMMdd</string>
    <string name="FileManage">文件管理器</string>
    <string name="RegisterError_1">授权码已经过期, 请重新获取!</string>
    <string name="title_activity_house_info_window">HouseInfoWindow</string>
    <string name="title_activity_right_person_info_window">RightPersonInfoWindow</string>
    <string name="title_activity_parcel_info_window">ParcelInfoWindow</string>

</resources>
