<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar1_jz"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        fab:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/JZActivityToolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:translationZ="10dp"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageButton
                android:id="@+id/startTrail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_play"
                android:visibility="invisible"
                />
            <ImageButton
                android:id="@+id/trail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_gravity="start"
                android:background="@drawable/ic_subway_black"
                />
            <ImageButton
                android:id="@+id/endTrail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_stop"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/LatLngTip"/>
            <ImageButton
                android:id="@+id/addPoi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_location"
                />
            <ImageButton
                android:id="@+id/query_poi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_search_black"
                android:visibility="invisible"
                />
            <ImageButton
                android:id="@+id/trans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ic_close_black_24dp"
                />
        </LinearLayout>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:translationZ="0dp"
            android:elevation="0dp">
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:translationZ="0dp"
                android:elevation="0dp"/>
            <ImageButton
                android:id="@+id/trans_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_arrow_forward_black_24dp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/trans_prior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_arrow_back_black_24dp" />
            <ImageView
            android:id="@+id/centerPoint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_center_focus_weak_black_24dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="5dp"
        android:alpha="0.8">
        <ImageView
            android:id="@+id/myscale1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myscale"/>
        <TextView
            android:id="@+id/scale1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/poiLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_alignParentRight="true"
        android:text="@string/ShowPOI"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/type1_poiLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/type2_poiLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/type3_poiLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/trailLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_alignParentRight="true"
        android:text="@string/ShowTrail"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/whiteBlankLayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_alignParentRight="true"
        android:text="@string/ShowWhiteBlank"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/centerPointMode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_alignParentRight="true"
        android:text="@string/CenterMode"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:checked="true"/>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/locHere1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_label="@string/Loc"
        fab:fab_size="mini"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/whiteBlank1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_brush_black_24dp"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_ok1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_done_black_24dp"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_choose1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/icon_minus"
        android:layout_toStartOf="@+id/icon_shift"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_insert_photo_black_24dp"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/icon_ok"
        android:layout_toEndOf="@+id/icon_shift"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_delete"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_shift1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/icon_plus"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_all_out_black_24dp"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_minus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/icon_ok"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_remove_black_24dp"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/icon_plus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/icon_ok"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_add"
        android:visibility="gone"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/backpts_messure1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_arrow_back"
        fab:fab_size="mini"
        android:visibility="gone"/>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/cancel_messure1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_cancel_black_24dp"
        fab:fab_size="mini"
        android:visibility="gone"/>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/delete_messure1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/ic_crop_5_4_black_24dp"
        fab:fab_size="mini"
        android:visibility="gone"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_fab_label="@string/Back"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addTape1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/AddTape"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addPhoto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/AddPhoto"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/restoreZoom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/Reset"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/messureDistance1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/Messure"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addMap_jzactivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/AddMap"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
